test/valid/prop-nested-get.js
function f(x) { return x.foo.foo; };
var x = f({ foo: { foo: 0 } });
